chore(ITS_RCT): fix yarn deploy

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,3 @@
-# Specify the folder where Yarn should store its cache files
-cacheFolder: .yarn
-
-# Define the method Yarn should use to link node modules
+cacheFolder: .yarn-cache
 nodeLinker: node-modules
 yarnPath: .yarn/releases/yarn-4.5.0.cjs
