--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
   "packageManager": "yarn@4.5.0",
   "scripts": {
     "build": "yarn run build:package",
-    "build:package": "vite build",
+    "build:package": "CI=false && vite build",
     "build:storybook": "storybook build -o storybook",
     "dev": "vite",
     "lint": "eslint --report-unused-disable-directives --max-warnings 0",
