--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -35,5 +35,11 @@
 
     "types": ["@testing-library/jest-dom"]
   },
-  "include": ["src", "vitest.prepare.ts", "src/common/components/Badge/.stories.ts"]
+  "include": [
+    "src",
+    "vitest.prepare.ts",
+    "src/i18n/translate/en/en.json",
+    "src/i18n/translate/vi/vi.json",
+    "src/common/components/Badge/.stories.ts"
+  ]
 }
