--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/coverage-istanbul": "^2.0.5",
     "eslint": "9.x",
     "eslint-config-prettier": "^9.1.0",
@@ -75,6 +76,7 @@
     "vite": "^5.3.4",
     "vite-plugin-checker": "^0.7.2",
     "vite-plugin-dts": "^4.3.0",
+    "vite-plugin-webfont-dl": "^3.10.4",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5"
   },
