--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@reduxjs/toolkit": "^2.6.0",
     "clsx": "^2.1.1",
     "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.5",
+    "i18next-http-backend": "^3.0.2",
     "i18next-react": "^0.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
